--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
    
     <script>
-        // Redirect to home page on refresh
-        window.onbeforeunload = function() {
-            window.location.href = 'index.html'; // Redirect to home page
+        // Scroll to the top on refresh
+        window.onload = function() {
+            window.scrollTo(0, 0);
         };
     </script>
 
